# a2_group24

./: .gitignore  README.md  main.py  output.txt  package-lock.json  pyproject.toml
instance/: sitedata.sqlite
website/: __init__.py  auth.py  events.py  forms.py  models.py  views.py
website/static/style/: styles.css
website/templates/: _event_cards.html  base.html  index.html  search_results.html  user.html
website/templates/components/: _event_card_base.html  event_card_creator.html  event_card_order.html  event_card_order.html:Zone.Identifier
website/templates/errors/: 404.html  500.html
website/templates/events/: books.html  create.html  genre.html  my_events.html  show.html
website/templates/partials/: featured_carousel.html
